--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -32,41 +32,19 @@ header #navbar a:hover {
   transition: 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 900px) {
-  header #navbar {
-    width: 90vw;
-  }
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a:first-child {
-    float: left;
-  }
-  #navbar a.expand-icon {
-    float: right;
-    display: block;
-  }
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-@media screen and (max-width: 900px) {
-  .topnav.responsive {
-    position: absolute;
-  }
-  .topnav.responsive .expand-icon {
-    position: absolute;
-    margin: 15px;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    margin: 0.3rem;
-    float: none;
-    display: block;
-    text-align: left;
-  }
+::-webkit-scrollbar-track {
+  background: #131212;
 }
 
-@media screen and (min-width: 900px) {
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(109.47deg, #61DBFB 18.18%, #3AB2FC 76.86%);
+}
+
+@media screen and (min-width: 1171px) {
   #navbar {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -83,16 +61,115 @@ header #navbar a:hover {
   }
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+@media screen and (min-width: 769px) and (max-width: 1170px) {
+  header #navbar {
+    width: 90vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header #navbar a {
+    margin: 0 50px;
+  }
+  div.my-description,
+  div.my-image {
+    float: none !important;
+    width: 100% !important;
+    min-height: 0 !important;
+  }
+  .my-description {
+    height: 25vh !important;
+  }
+  .my-image {
+    height: 75vh !important;
+    padding-bottom: 8rem !important;
+  }
 }
 
-::-webkit-scrollbar-track {
-  background: #131212;
+@media screen and (max-width: 768px) {
+  header #navbar {
+    width: 90vw;
+  }
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav a:first-child {
+    float: left;
+  }
+  #navbar a.expand-icon {
+    float: right;
+    display: block;
+  }
+  .topnav.responsive {
+    position: absolute;
+  }
+  .topnav.responsive .expand-icon {
+    position: absolute;
+    margin: 15px;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    margin: 0.3rem;
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .my-description .lg-heading {
+    font-size: 2rem;
+  }
+  .my-description .sm-heading {
+    padding-top: 0.6rem;
+    font-size: 1.3rem;
+  }
+  .my-description .social-icons {
+    font-size: 1rem;
+  }
+  .my-image img {
+    width: 14rem !important;
+    height: auto;
+  }
 }
 
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(109.47deg, #61DBFB 18.18%, #3AB2FC 76.86%);
+@media screen and (min-width: 300px) and (max-width: 767px) {
+  main #about {
+    padding: 2rem !important;
+  }
+  div.my-description,
+  div.my-image {
+    float: none !important;
+    width: 100% !important;
+    min-height: 0 !important;
+  }
+  .my-description {
+    text-align: center;
+    height: 25vh !important;
+    padding-top: 2rem !important;
+  }
+  .my-description .lg-heading {
+    font-size: 2rem;
+  }
+  .my-description .sm-heading {
+    padding-top: 0.6rem;
+    font-size: 1rem;
+  }
+  .my-description .social-icons {
+    font-size: 0.8rem;
+  }
+  .my-image {
+    height: 75vh !important;
+    padding-bottom: 2rem !important;
+  }
+  .my-image img {
+    width: 18rem !important;
+    height: auto;
+  }
 }
 
 * {
