--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -5,3 +5,28 @@ $blueColor: #61dbfb;
 @mixin easeOut {
     transition: 0.3s ease-in-out;
 }
+
+// Media query mixins
+@mixin mediaSm {
+    @media screen and (min-width: 300px) and (max-width: 767px) {
+        @content;
+    }
+}
+
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+
+@mixin mediaXL {
+    @media screen and (min-width: 1171px) {
+        @content;
+    }
+}
